--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,10 @@ a {
   margin: 0 auto; /*Alinhamento ao centro*/
 }
 
+.mainContainer {
+  margin-top: 4rem;
+}
+
 .title {
   font-family: var(--type-second);
   line-height: 1;
